# goit-pyweb-hw4

./: main.py  message.html  pyproject.toml  socket_client.py  socket_server.py
storage/: data.json
